--- a/backend/package.json
+++ b/backend/package.json
@@ -8,16 +8,16 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.1",
+    "axios": "^0.27.2",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "pg": "^8.7.3",
+    "express": "^4.18.1",
+    "form-data": "^4.0.0",
     "multer": "^1.4.5-lts.1",
-    "axios": "^0.27.2",
-    "form-data": "^4.0.0"
+    "pg": "^8.7.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
   }
 }
-
