--- a/shap-e-service/Dockerfile
+++ b/shap-e-service/Dockerfile
@@ -5,7 +5,16 @@ WORKDIR /app
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
+    git \
+    ffmpeg \
     && rm -rf /var/lib/apt/lists/*
+
+# Install PyTorch (CPU) first to ensure compatibility
+RUN pip install --no-cache-dir \
+    torch==2.0.1+cpu \
+    torchvision==0.15.2+cpu \
+    torchaudio==2.0.2+cpu \
+    --index-url https://download.pytorch.org/whl/cpu
 
 # Copy requirements and install Python dependencies
 COPY requirements.txt .
