--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,10 @@ services:
       - shape-service
     volumes:
       - ./backend:/app
-      - /app/node_modules
-      - backend_uploads:/app/uploads
-      - backend_models:/app/models
-      - backend_previews:/app/previews
+      - ./backend/node_modules:/app/node_modules
+      - ./backend/uploads:/app/uploads
+      - ./backend/models:/app/models
+      - ./backend/previews:/app/previews
 
   frontend:
     build:
@@ -33,8 +33,8 @@ services:
       - backend
     volumes:
       - ./src:/app/src
-      - /app/node_modules
-      - /app/public
+      - ./node_modules:/app/node_modules
+      - ./public:/app/public
 
   db:
     image: postgres:15-alpine
@@ -45,7 +45,7 @@ services:
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=dsh
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - ./postgres_data:/var/lib/postgresql/data
       - ./backend/init.sql:/docker-entrypoint-initdb.d/init.sql
 
   shape-service:
@@ -56,17 +56,11 @@ services:
       - "8000:8000"
     environment:
       - PYTHONUNBUFFERED=1
+      - HF_HOME=/root/.cache
+      - TRANSFORMERS_CACHE=/root/.cache
     volumes:
       - ./shap-e-service/app:/app
-      - ./shap-e-service/cache:/root/.cache/shap-e
-      - shape_models:/app/models
-      - shape_previews:/app/previews
-      - backend_uploads:/app/uploads:ro
-
-volumes:
-  postgres_data:
-  backend_uploads:
-  backend_models:
-  backend_previews:
-  shape_models:
-  shape_previews:
+      - ./shap-e-service/cache:/root/.cache
+      - ./shap-e-service/app/models:/app/models
+      - ./shap-e-service/app/previews:/app/previews
+      - ./backend/uploads:/app/uploads:ro
